# sokol_triangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shaders.bat  compile_shaders.sh  generate_vs.bat  main.c  shader_hotreloader.bat  sokol_app.h
src/: common.h  fontstash.h  linked_arena.c  linked_arena.h  main.c  nanosvg.h  nanosvg2.h  nanosvg3.h  nanosvgrast.h  nanosvgrast2.h  nanosvgrast3.h  nanovg.c  nanovg.glsl  nanovg.h  nanovg2.c  nanovg2.glsl  nanovg2.h  nanovg_fs.glsl  nanovg_sokol.h  nanovg_vs.glsl  platform_mac.m  platform_win.c  program_3d_wavetable_stroked.c  program_3d_wavetable_stroked.glsl  program_animated_vertices.c  program_animated_vertices.glsl  program_blur_compute.c  program_blur_compute.glsl  program_compute_line_stroke.c  program_compute_line_stroke.glsl  program_compute_triangle.c  program_compute_triangle.glsl  program_draw_rect.c  program_dualfilter_blur.c  program_dualfilter_blur.glsl  program_flatten_quadbez.c  program_flatten_quadbez.glsl  program_fxaa.c  program_fxaa.glsl  program_gaussian_blur.c  (+55 more)
src/shaders/: hello_world.glsl  white.glsl
